[24.November 2008]
- rect.rb: added method Rectangle#expand2 (and ! variant);
  methods to get coordinates of corners
- tests/mockclasses.rb: TestingMapLoadStrategy modified so that I might
  define new map inside the test
- map.rb: Map#find_surface; Map#pixels_to_tiles; Map#area_free? and 
  Map#largest_free_rect modified to use Map#pixels_to_tiles

[23.November 2008]
- rect.rb: Rectangle#copy_values
- staticobject.rb: added support for semisolidness

[17.November 2008]
- tests/test.rb: automatic requirement of tests (similar to the one used in
  freeVikings tests);
  tests/testlocation.rb removed
- rect.rb, tests/testrect.rb: added methods move!, move_x!, move_y!, expand!;
  changed implementation: Rectangle doesn't inherit from Array,
  but delegates some methods (inheritance did weird things in tests)
- rect.rb, relativerect.rb, schwerengine.rb, tests:
  implemented class RelativeRect
- tests/test.rb: fixed displaying of progress

[6.November 2008]
- model.rb: RD->RDoc
- map.rb & associated test: added methods Map#point_free? and
  Map#largest_free_rect

[31.October 2008]
- two new methods for TimeLock (end_time and time_left)

[28.October 2008]
- tiledmaploadstrategy.rb: more than one tileset may be used

[19.October 2008]
- TiledMapLoadStrategy: yesterday I solved ancient "stupid problem" in Map,
  so today I could delete line which was here to "solve" it by adding one
  more row of tiles at the top of a map

[18.October 2008]
- tests: removed class TestMap2
- TestMap: tests which helped me better understand Map#area_free?
- Rect#new_from_points, Rect#center
- Map: solved "dirty thing problem"!
- level ArcticTutorial: EXIT moved 40 px down (fix because of change in Map)

[6.October 2008]
- xmlmap2loadstrategy.rb: implemented loading 'old XML maps'
  (most of freeVikings maps are in this format)
- *map2*.rb: files renamed to *map*.rb (old Map and relatives replaced)
- tile.rb removed (useless now)