@@ -1,3 +1,7 @@
+[7.December 2008]
+- entity.rb: added z (layer index)
+- rect2.rb: attempt to optimize Rect without compiled extensions
+
 [24.November 2008]
 - rect.rb: added method Rectangle#expand2 (and ! variant);
   methods to get coordinates of corners
